--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+local_code/
+local_simulation/
+.idea/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
